--- a/docker/back/srcs/Makefile
+++ b/docker/back/srcs/Makefile
@@ -1,2 +1,10 @@
 all:
-	docker build -t postgre ./postgresql
+	docker compose up
+clean:
+	docker system prune -a
+fclean:
+	docker stop $$(docker ps -qa)
+	docker system prune --all --force --volumes
+re: fclean
+	make all
+.PHONY	: all clean fclean re
