feat: web-app 도커 관련 설정#10
Description
- docker-compose 에 app 추가
- node Dockerfile 추가
- app 에서 실행할 쉘 스크립트 추가
Bug
- mkdir -p /app/script 로 디렉토리가 생성되지 않음

--- a/docker/back/srcs/docker-compose.yml
+++ b/docker/back/srcs/docker-compose.yml
@@ -8,3 +8,13 @@ services:
     env_file:
       - .env
     restart: always
+  
+  app:
+    image: node:18.16.1-bookworm
+    container_name: app
+    build:
+      context: ../../../
+      dockerfile: ./docker/back/srcs/app/
+    ports: 
+      - 8080:8080
+    restart: always
