feat: nest 서비스 가동하기 시도 중#11
- Makefile 위치를 docker/back/srcs 에서 /docker/back 으로 옮김
- docker-compose.yml 파일에서 app 만 세팅하도록 변경함
- WORKDIR 을 변경해서 적용하려 시도했는데 실행이 잘 되지 않음. docker
  compose 가 아닌 build 명령어로 어떤 명령어까지 제대로 작동하나 하나씩
봐야할 것 같다.

--- a/docker/back/srcs/docker-compose.yml
+++ b/docker/back/srcs/docker-compose.yml
@@ -1,20 +1,27 @@
+version: '3'
+
 services:
-  postgres:
-    image: postgres:15.3-bookworm
-    container_name: postgres
-    build: ./postgres
-    ports: 
-      - 5432:5432
-    env_file:
-      - .env
-    restart: always
-  
   app:
     image: node:18.16.1-bookworm
     container_name: app
+    # Set project root directory
     build:
       context: ../../../
-      dockerfile: ./docker/back/srcs/app/
+      dockerfile: /docker/back/srcs/app/Dockerfile
+    volumes:
+      - /back/web-app:/usr/src
     ports: 
       - 8080:8080
     restart: always
+
+  # postgres:
+  #   image: postgres:15.3-bookworm
+  #   container_name: postgres
+  #   build: ./postgres
+  #   ports: 
+  #     - 5432:5432
+  #   env_file:
+  #     - .env
+  #   restart: always
+# docker run -it --name mycontainer -p 8080:80 -v /host/dir:/container/dir image_name command arg1 arg2
+ 
