--- a/docker/back/srcs/app/Dockerfile
+++ b/docker/back/srcs/app/Dockerfile
@@ -1,13 +1,12 @@
 FROM node:18.16.1-bookworm
 
-RUN mkdir -p /app/script
+WORKDIR /usr/src
 
-COPY ./back/web-app /app
-COPY ./docker/back/srcs/app/tools/ /app/script
+# COPY /back/web-app /usr/src
+COPY /docker/back/srcs/app/tools .
 
-RUN chmod -R 755 /app/script/
-    && /app/script/app.sh 
-
-WORKDIR /app/web-app
+RUN chmod -R 755 .
+    && tools/app.sh 
 
 CMD ["npm", "run", "start:dev"]
+# CMD ["/bin/bash"]
