feat: node, postgres 이미지 빌드 후 컨테이너로 실행#10
docker compose
- volumes 설정 후 볼륨 마운트 시킴

Dockerfile
- 빌드 속도가 느려서 debian에서 alpine 으로 변경
- alpine 에는 bash 가 없어서 sh 로 쉘 스크립트를 실행
- docker compose 에서 볼륨 마운트 되는 시점이 이미지 빌드 후 docker
  compose up 이 실행되는 때라서 npm i 의 의존성을 충족 시킬 수 없었다.
그래서 쉘 스크립트에 npm i 와 run start:dev 를 담고 도커 파일에서 쉘
스크립트를 마지막에 실행 시키는 방향으로 갔다.

--- a/docker/back/srcs/app/Dockerfile
+++ b/docker/back/srcs/app/Dockerfile
@@ -1,12 +1,10 @@
-FROM node:18.16.1-bookworm
+FROM node:18-alpine3.17
 
-WORKDIR /usr/src
+WORKDIR /usr/src/web-app
 
-# COPY /back/web-app /usr/src
-COPY /docker/back/srcs/app/tools .
+COPY docker/back/srcs/app/tools/ ../tools
+# COPY back/web-app .
 
-RUN chmod -R 755 .
-    && tools/app.sh 
+RUN chmod -R 755 ../tools
 
-CMD ["npm", "run", "start:dev"]
-# CMD ["/bin/bash"]
+CMD ["/bin/sh", "../tools/app.sh"]
