--- a/docker/back/Makefile
+++ b/docker/back/Makefile
@@ -1,10 +1,12 @@
 all:
 	docker compose -f srcs/docker-compose.yml up
+down:
+	docker compose -f srcs/docker-compose.yml down
 clean:
 	docker system prune -a
 fclean:
 	docker stop $$(docker ps -qa)
 	docker system prune --all --force --volumes
 re: clean
-	make all
+	docker compose -f srcs/docker-compose.yml up --build
 .PHONY	: all clean fclean re
