--- a/docker/back/srcs/docker-compose.yml
+++ b/docker/back/srcs/docker-compose.yml
@@ -2,26 +2,36 @@ version: '3'
 
 services:
   app:
-    image: node:18.16.1-bookworm
+    image: node:18-alpine3.17
     container_name: app
-    # Set project root directory
+    # Set project root directory, docker image 가 빌드할 때 사용하는 파일이 이 경로 안에 모두 포함 되어 있어야 한다.
     build:
       context: ../../../
-      dockerfile: /docker/back/srcs/app/Dockerfile
+      dockerfile: docker/back/srcs/app/Dockerfile
     volumes:
-      - /back/web-app:/usr/src
+      - app-volume:/usr/src/web-app
     ports: 
       - 8080:8080
     restart: always
 
-  # postgres:
-  #   image: postgres:15.3-bookworm
-  #   container_name: postgres
-  #   build: ./postgres
-  #   ports: 
-  #     - 5432:5432
-  #   env_file:
-  #     - .env
-  #   restart: always
-# docker run -it --name mycontainer -p 8080:80 -v /host/dir:/container/dir image_name command arg1 arg2
+  postgres:
+    image: postgres:15.3-alpine3.18
+    container_name: postgres
+    build: ./postgres
+    ports: 
+      - 5432:5432
+    env_file:
+      - .env
+    restart: always
+
+volumes:
+  app-volume:
+    driver_opts:
+      o: bind
+      type: none
+      device: ${PWD}/../../back/web-app
+
+networks:
+  back_end_net:
+    driver: bridge
  
