--- a/front/package.json
+++ b/front/package.json
@@ -12,11 +12,13 @@
     "@types/node": "20.3.3",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
+    "axios": "^1.4.0",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
     "next": "13.4.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "styled-components": "^6.0.4",
     "typescript": "5.1.6"
   }
 }
