--- a/front/package.json
+++ b/front/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/gravatar": "^1.8.3",
     "@types/node": "20.3.3",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "axios": "^1.4.0",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
+    "gravatar": "^1.8.2",
     "next": "13.4.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
