--- a/front/package.json
+++ b/front/package.json
@@ -21,6 +21,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "styled-components": "^6.0.4",
+    "swr": "^2.2.0",
     "typescript": "5.1.6"
   }
 }
