--- a/front/package.json
+++ b/front/package.json
@@ -20,6 +20,7 @@
     "next": "13.4.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "socket.io-client": "^4.7.1",
     "styled-components": "^6.0.4",
     "swr": "^2.2.0",
     "typescript": "5.1.6"
