--- a/front/package.json
+++ b/front/package.json
@@ -14,6 +14,7 @@
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "axios": "^1.4.0",
+    "bufferutil": "^4.0.7",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
     "gravatar": "^1.8.2",
@@ -23,6 +24,8 @@
     "socket.io-client": "^4.7.1",
     "styled-components": "^6.0.4",
     "swr": "^2.2.0",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "utf-8-validate": "^5.0.10",
+    "ws": "^8.13.0"
   }
 }
