--- a/back/web-app/package.json
+++ b/back/web-app/package.json
@@ -26,6 +26,7 @@
     "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.0",
+    "builder-pattern": "^2.2.0",
     "passport": "^0.6.0",
     "passport-42": "^1.2.6",
     "passport-local": "^1.0.0",
