--- a/back/web-app/package.json
+++ b/back/web-app/package.json
@@ -27,6 +27,8 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.0",
     "builder-pattern": "^2.2.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "express-session": "^1.17.3",
     "passport": "^0.6.0",
     "passport-42": "^1.2.6",
