--- a/back/web-app/package.json
+++ b/back/web-app/package.json
@@ -34,6 +34,7 @@
     "class-validator": "^0.14.0",
     "crypto": "^1.0.1",
     "express-session": "^1.17.3",
+    "lodash": "^4.17.21",
     "passport": "^0.6.0",
     "passport-42": "^1.2.6",
     "passport-local": "^1.0.0",
