feat: front docker server #122

--- a/docker/front/srcs/requirements/nextjs/Dockerfile
+++ b/docker/front/srcs/requirements/nextjs/Dockerfile
@@ -7,20 +7,13 @@ RUN apk add --no-cache libc6-compat
 WORKDIR /app
 
 # Install dependencies based on the preferred package manager
-COPY package.json yarn.lock* package-lock.json* pnpm-lock.yaml* ./
+COPY package.json  package.json
 
-# dependencies does not catch this lib
-RUN yarn add bufferutil
-RUN yarn add utf-8-validate
+# kipark: socket io dependencies module need this package
+RUN apk add build-base
+RUN apk add python3
 
-
-RUN \
-  if [ -f yarn.lock ]; then yarn --frozen-lockfile; \
-  elif [ -f package-lock.json ]; then npm ci; \
-  elif [ -f pnpm-lock.yaml ]; then yarn global add pnpm && pnpm i --frozen-lockfile; \
-  else echo "Lockfile not found." && exit 1; \
-  fi
-
+RUN npm install
 
 # Rebuild the source code only when needed
 FROM base AS builder
@@ -62,6 +55,6 @@ EXPOSE 3000
 
 ENV PORT 3000
 # set hostname to localhost
-ENV HOSTNAME "0.0.0.0"
+# ENV HOSTNAME "0.0.0.0"
 
-CMD ["node", "server.js"]s
+CMD ["node", "server.js"]
