--- a/back/web-app/package.json
+++ b/back/web-app/package.json
@@ -27,7 +27,9 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.2.1",
     "@nestjs/typeorm": "^10.0.0",
+    "@nestjs/websockets": "^10.2.1",
     "axios": "^1.4.0",
     "builder-pattern": "^2.2.0",
     "class-transformer": "^0.5.1",
@@ -41,6 +43,8 @@
     "pg": "^8.11.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "socket.io": "^4.7.2",
+    "socket.io-express-session": "^0.1.3",
     "typeorm": "^0.3.17",
     "uuid": "^9.0.0"
   },
