[Feat] api 테스트를 위한 도커세팅 - npm start:dev -> npm start - delete configServer DB_SCHEMA - docker compose port 추가 및 network 연결 - 42oauth POST ->  GET 변경

--- a/docker/back/srcs/docker-compose.yml
+++ b/docker/back/srcs/docker-compose.yml
@@ -11,7 +11,10 @@ services:
     volumes:
       - app-volume:/usr/src/web-app
     ports: 
-      - 8080:8080
+      - "8080:8080"
+      - "10001:10001"
+    networks:
+      - back_end_net
     restart: always
 
   postgres:
@@ -22,6 +25,8 @@ services:
       - 5432:5432
     env_file:
       - .env
+    networks:
+      - back_end_net
     restart: always
 
 volumes:
