--- a/back/web-app/package.json
+++ b/back/web-app/package.json
@@ -31,6 +31,7 @@
     "@nestjs/typeorm": "^10.0.0",
     "@nestjs/websockets": "^10.2.1",
     "axios": "^1.4.0",
+    "bcrypt": "^5.1.1",
     "builder-pattern": "^2.2.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
