--- a/front/package.json
+++ b/front/package.json
@@ -21,6 +21,7 @@
     "next": "13.4.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "recoil": "^0.7.7",
     "socket.io-client": "^4.7.1",
     "styled-components": "^6.0.4",
     "swr": "^2.2.0",
