fix : strict mode false, paddle move event send #180

--- a/front/tsconfig.json
+++ b/front/tsconfig.json
@@ -1,10 +1,14 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
-    "strict": true,
+    // "strict": true,
     "forceConsistentCasingInFileNames": true,
     "noEmit": true,
     "esModuleInterop": true,
@@ -20,11 +24,25 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"],
-      "@/component/*": ["./src/component/*"],
-      "@/hooks/*": ["./src/hooks/*"]
-    }
+      "@/*": [
+        "./src/*"
+      ],
+      "@/component/*": [
+        "./src/component/*"
+      ],
+      "@/hooks/*": [
+        "./src/hooks/*"
+      ]
+    },
+    "strict": false
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules"]
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
