--- a/back/game-app/package.json
+++ b/back/game-app/package.json
@@ -29,6 +29,7 @@
     "@nestjs/platform-socket.io": "^10.2.2",
     "@nestjs/websockets": "^10.2.2",
     "builder-pattern": "^2.2.0",
+    "fast-linked-list": "^3.2.3",
     "google-protobuf": "^3.21.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
@@ -37,7 +38,7 @@
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
-    "@n가estjs/testing": "^10.0.0",
+    "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
