--- a/back/web-app/package.json
+++ b/back/web-app/package.json
@@ -32,6 +32,7 @@
     "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-socket.io": "^10.2.1",
+    "@nestjs/serve-static": "^4.0.0",
     "@nestjs/typeorm": "^10.0.0",
     "@nestjs/websockets": "^10.2.1",
     "axios": "^1.4.0",
