--- a/back/web-app/package.json
+++ b/back/web-app/package.json
@@ -43,6 +43,7 @@
     "crypto": "^1.0.1",
     "express-session": "^1.17.3",
     "lodash": "^4.17.21",
+     "luxon": "^3.4.3",
     "passport": "^0.6.0",
     "passport-42": "^1.2.6",
     "passport-local": "^1.0.0",
