[Refactor] dockerfile(app) 수정
* app -> web-app 이름 변경
- game-app이 추가되면서 이름을 수정하였습니다.

--- a/docker/back/srcs/web-app/Dockerfile
+++ b/docker/back/srcs/web-app/Dockerfile
@@ -2,7 +2,8 @@ FROM node:18-alpine3.17
 
 WORKDIR /usr/src/web-app
 
-COPY docker/back/srcs/app/tools/ ../tools
+COPY back/web-app/ ../web-app
+COPY docker/back/srcs/web-app/tools/ ../tools
 
 RUN chmod -R 755 ../tools
 
