--- a/docker/back/srcs/docker-compose.yml
+++ b/docker/back/srcs/docker-compose.yml
@@ -1,16 +1,14 @@
 version: '3'
 
 services:
-  app:
-    image: node:18-alpine3.17
-    container_name: app
+  web-app:
+    image: web:18-alpine3.17
+    container_name: web-app
     # Set project root directory, docker image 가 빌드할 때 사용하는 파일이 이 경로 안에 모두 포함 되어 있어야 한다.
     build:
       context: ../../../
-      dockerfile: docker/back/srcs/app/Dockerfile
-    volumes:
-      - app-volume:/usr/src/web-app
-    ports: 
+      dockerfile: docker/back/srcs/web-app/Dockerfile
+    ports:
       - "8080:8080"
       - "10001:10001"
     networks:
@@ -28,13 +26,6 @@ services:
     networks:
       - back_end_net
     restart: always
-
-volumes:
-  app-volume:
-    driver_opts:
-      o: bind
-      type: none
-      device: ${PWD}/../../back/web-app
 
 networks:
   back_end_net:
