[Feat] docker-compose 수정 (+)
* depends_on:
- 실행 우선순위 추가

* game-app 서비스 추가
- expose: 컨테이너 내부에서만 해당 포트를 열어 놓습니다. 호스트에서는 접근이 불가능합니다.

--- a/docker/back/srcs/docker-compose.yml
+++ b/docker/back/srcs/docker-compose.yml
@@ -11,6 +11,24 @@ services:
     ports:
       - "8080:8080"
       - "10001:10001"
+      - "10002:10002"
+    depends_on:
+      - game-app
+      - postgres
+    networks:
+      - back_end_net
+    restart: always
+
+  game-app:
+    image: game:18-alpine3.17
+    container_name: game-app
+    build:
+      context: ../../../
+      dockerfile: docker/back/srcs/game-app/Dockerfile
+    ports:
+      - "10003:10003"
+    expose:
+      - "8081"
     networks:
       - back_end_net
     restart: always
