--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     container_name: web-app
     # Set project root directory, docker image 가 빌드할 때 사용하는 파일이 이 경로 안에 모두 포함 되어 있어야 한다.
     build:
-      context: ../../../
+      context: ../
       dockerfile: docker/back/srcs/web-app/Dockerfile
     ports:
       - "8080:8080"
@@ -16,36 +16,45 @@ services:
       - game-app
       - postgres
     networks:
-      - back_end_net
+      - intra
     restart: always
 
   game-app:
     image: game:18-alpine3.17
     container_name: game-app
     build:
-      context: ../../../
+      context: ../
       dockerfile: docker/back/srcs/game-app/Dockerfile
     ports:
       - "10003:10003"
     expose:
       - "8081"
     networks:
-      - back_end_net
+      - intra
     restart: always
 
   postgres:
     image: postgres:15.3-alpine3.18
     container_name: postgres
-    build: ./postgres
     ports: 
       - 5432:5432
     env_file:
       - .env
     networks:
-      - back_end_net
+      - intra
+    restart: always
+
+  nextjs:
+    build:
+      context: ../
+      dockerfile: docker/front/srcs/nextjs/Dockerfile
+    ports:
+      - 3000:3000
+    networks:
+      - intra
     restart: always
 
 networks:
-  back_end_net:
+  intra:
     driver: bridge
  
