--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,59 +1,58 @@
 version: '3'
 
 services:
-  # web-app:
-  #   image: web:18-alpine3.17
-  #   container_name: web-app
-  #   # Set project root directory, docker image 가 빌드할 때 사용하는 파일이 이 경로 안에 모두 포함 되어 있어야 한다.
-  #   build:
-  #     context: ../
-  #     dockerfile: docker/back/srcs/web-app/Dockerfile
-  #   ports:
-  #     - "8080:8080"
-  #     - "10001:10001"
-  #     - "10002:10002"
-  #   depends_on:
-  #     - game-app
-  #     - postgres
-  #   networks:
-  #     - intra
-  #   restart: always
+   web-app:
+     image: web:18-alpine3.17
+     container_name: web-app
+     # Set project root directory, docker image 가 빌드할 때 사용하는 파일이 이 경로 안에 모두 포함 되어 있어야 한다.
+     build:
+       context: ../
+       dockerfile: docker/back/srcs/web-app/Dockerfile
+     ports:
+       - "8080:8080"
+       - "10001:10001"
+       - "10002:10002"
+     depends_on:
+       - game-app
+       - postgres
+     networks:
+       - intra
+     restart: always
 
-  # game-app:
-  #   image: game:18-alpine3.17
-  #   container_name: game-app
-  #   build:
-  #     context: ../
-  #     dockerfile: docker/back/srcs/game-app/Dockerfile
-  #   ports:
-  #     - "10003:10003"
-  #   expose:
-  #     - "8081"
-  #   networks:
-  #     - intra
-  #   restart: always
+   game-app:
+     image: game:18-alpine3.17
+     container_name: game-app
+     build:
+       context: ../
+       dockerfile: docker/back/srcs/game-app/Dockerfile
+     ports:
+       - "10003:10003"
+     expose:
+       - "8081"
+     networks:
+       - intra
+     restart: always
 
-  # postgres:
-  #   image: postgres:15.3-alpine3.18
-  #   container_name: postgres
-  #   ports:
-  #     - 5432:5432
-  #   env_file:
-  #     - .env
-  #   networks:
-  #     - intra
-  #   restart: always
+   postgres:
+     image: postgres:15.3-alpine3.18
+     container_name: postgres
+     ports:
+       - 5432:5432
+     env_file:
+       - .env
+     networks:
+       - intra
+     restart: always
 
-  nextjs:
-    build:
-      context: ../front
-      dockerfile: ../docker/front/srcs/nextjs/Dockerfile
-    ports:
-      - 3000:3000
-    networks:
-      - intra
-    tty: true
-    restart: always
+   nextjs:
+     build:
+       context: ../front
+       dockerfile: ../docker/front/srcs/nextjs/Dockerfile
+     ports:
+       - 3000:3000
+     networks:
+       - intra
+     restart: always
 
 networks:
   intra:
