--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,6 @@ services:
      container_name: web-app
      # Set project root directory, docker image 가 빌드할 때 사용하는 파일이 이 경로 안에 모두 포함 되어 있어야 한다.
      build:
-       context: ../
        dockerfile: docker/back/srcs/web-app/Dockerfile
      ports:
        - "8080:8080"
@@ -23,7 +22,6 @@ services:
      image: game:18-alpine3.17
      container_name: game-app
      build:
-       context: ../
        dockerfile: docker/back/srcs/game-app/Dockerfile
      ports:
        - "10003:10003"
@@ -46,7 +44,7 @@ services:
 
    nextjs:
      build:
-       context: ../front
+       context: ./front
        dockerfile: ../docker/front/srcs/nextjs/Dockerfile
      ports:
        - 3000:3000
